--- a/Oliveira.js/package.json
+++ b/Oliveira.js/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-netlify": "^2.0.6",
-    "@sveltejs/kit": "^1.5.0",
+    "@sveltejs/adapter-vercel": "^2.4.1",
+    "@sveltejs/kit": "^1.0.0-next.589",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
@@ -22,5 +23,8 @@
     "tailwindcss": "^3.1.5",
     "vite": "^4.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@sveltejs/adapter-static": "^2.0.2"
+  }
 }
